gave up on arch after 6 months cus it didnt work (holy waste of time) so heres cherry blossom tea + brick counter